Camlp4 Version 3.07 beta
________________________

- [July 03] Updated the ocaml/camlp4 CVS tree with the camlp4
  "parallel" CVS tree, which becomes obsolete from now on.
   Added support for recursive modules, private data constructors, and
   new syntaxes for integers (int32, nativeint, ...).

Camlp4 Version 3.06++
-----------------------

- [02 Dec 02] In AST predefined quotation, changed antiquotations for
  "rec", "mutable": now all are with coercion "opt": $opt:...$ (instead
  of "rec" and "mut"). Added antiquotation for "private". Cleaned up
  the entries for "methods" and for labelled and optional parameters.
- [29 Nov 02] Removed all "extract_crc" stuff no more necessary with
  the new interface of Dynlink.
- [26 Nov 02] Added ability to use "#use" directives in compiled files.
- [21 Nov 02] Changed Scheme syntax for directives: now, e.g. #load "file"
  is written: # (load "file"). Added directives in "implem", "interf" and
  "use" directive.
- [20 Nov 02] Added Grammar.glexer returning the lexer used by a
  grammar. Also added a field in Token.glexer type to ask lexers to
  record the locations of the comments.
- [04 Nov 02] Added option -no_quot with normal syntax (pa_o.cmo):
  don't parse quotations (it allows to use e.g. <:> as a valid token).
- [31 Oct 02] Added pa_macro.cmo (to replace pa_ifdef.cmo which is
  kept for compatibility, but deprecated). The extended statements
  allow de definitions of macros and conditional compilation like
  in C.
- [29 Oct 02] Changed pretty printers of the three main syntaxes: if
  the locations of input are not correct, do no more raise End_of_file
  when displaying the inter-phrases (return: the input found up to eof
  if not empty, otherwise the value of the -sep parameter if not empty,
  otherwise the string "\n").
- [25 Oct 02] Added option -records in pa_sml.cmo: generates normal
  OCaml records instead of objects (the user must be sure that there
  are no names conflicts).